RESOLVED FIXED270478
REGRESSION(273523@main): A test case in html/semantics/forms/the-input-element/radio-disconnected-group-owner.html fails
https://bugs.webkit.org/show_bug.cgi?id=270478
Summary REGRESSION(273523@main): A test case in html/semantics/forms/the-input-elemen...
Ryosuke Niwa
Reported 2024-03-04 13:22:36 PST
One of the test cases in html/semantics/forms/the-input-element/radio-disconnected-group-owner.html fails after 273523@main.
Attachments
Ryosuke Niwa
Comment 1 2024-03-04 13:27:19 PST
EWS
Comment 2 2024-03-05 13:03:12 PST
Committed 275708@main (d8a8923dfc32): <https://commits.webkit.org/275708@main> Reviewed commits have been landed. Closing PR #25450 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-03-05 13:04:14 PST
Note You need to log in before you can comment on or make changes to this bug.