REGRESSION(273523@main): A test case in html/semantics/forms/the-input-element/radio-disconnected-group-owner.html fails https://bugs.webkit.org/show_bug.cgi?id=270478

Reviewed by Chris Dumez.

Add the input element to tree scope's radio group after insertion if it didn't result in becoming connected.

* LayoutTests/imported/w3c/web-platform-tests/html/semantics/forms/the-input-element/radio-disconnected-group-owner-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/forms/the-input-element/radio-disconnected-group-owner.html: Added.
* Source/WebCore/html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::insertedIntoAncestor):

Canonical link: https://commits.webkit.org/275708@main